# derive-diff

./: .travis.yml  Cargo.toml
slog-struct-diff/: Cargo.toml
slog-struct-diff/src/: lib.rs
src/: lib.rs
struct-diff/: Cargo.toml
struct-diff/src/: lib.rs
test-derive-diff/: Cargo.toml
test-derive-diff/src/: lib.rs
