[package]
name = "struct-diff"
version = "0.2.3"
authors = ["Alexander Polyakov <aleksandr.polyakov@kupibilet.ru>"]
description = "Trait for types that are diffable"
license = "MIT"
documentation = "https://docs.rs/struct-diff"
repository = "https://github.com/polachok/derive-diff"
keywords = ["diff"]

[dependencies]
boolinator = "2.4"
chrono = { version = "0.4", features = ["serde"] }
